--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>WebGL Map (Leaflet-like)</title>
     <style>
-      html, body {
+      html,
+      body {
         height: 100%;
         margin: 0;
       }
@@ -23,22 +24,42 @@
         position: absolute;
         right: 8px;
         bottom: 8px;
-        background: rgba(255,255,255,0.8);
+        background: rgba(255, 255, 255, 0.8);
         color: #222;
         padding: 4px 6px;
         border-radius: 4px;
-        font: 12px/1.2 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, sans-serif;
+        font:
+          12px/1.2 system-ui,
+          -apple-system,
+          Segoe UI,
+          Roboto,
+          Ubuntu,
+          Cantarell,
+          Noto Sans,
+          Helvetica,
+          Arial,
+          sans-serif;
         z-index: 10;
       }
       .hud {
         position: absolute;
         left: 8px;
         top: 8px;
-        background: rgba(255,255,255,0.8);
+        background: rgba(255, 255, 255, 0.8);
         color: #222;
         padding: 4px 6px;
         border-radius: 4px;
-        font: 12px/1.2 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, sans-serif;
+        font:
+          12px/1.2 system-ui,
+          -apple-system,
+          Segoe UI,
+          Roboto,
+          Ubuntu,
+          Cantarell,
+          Noto Sans,
+          Helvetica,
+          Arial,
+          sans-serif;
         z-index: 10;
       }
     </style>
@@ -46,8 +67,10 @@
   <body>
     <div id="map">
       <div class="hud" id="hud"></div>
-      <div class="attribution" id="attribution">Hagga Basin tiles © respective owners (game map)</div>
+      <div class="attribution" id="attribution">
+        Hagga Basin tiles © respective owners (game map)
+      </div>
     </div>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
-  </html>
+</html>
