UI: Darken home cards and add nav hover
- Switch home page cards to a neutral dark palette to match bg-neutral-800
- Add hover styles for header navigation and brand link (subtle color/background transitions)
- Static colors only (no dark-mode toggle)

Note: This commit also includes other currently staged workspace changes.

--- a/apps/svelte-gtmap-test/src/app.html
+++ b/apps/svelte-gtmap-test/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="m-0 p-0 bg-neutral-900 text-neutral-200 h-full w-full">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
