--- a/apps/svelte-gtmap-test/src/app.html
+++ b/apps/svelte-gtmap-test/src/app.html
@@ -5,7 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="m-0 p-0 bg-neutral-900 text-neutral-200 h-full w-full">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="m-0 h-full w-full bg-neutral-900 p-0 text-neutral-200"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
