--- a/apps/svelte-gtmap-test/src/app.html
+++ b/apps/svelte-gtmap-test/src/app.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="preconnect" href="https://gtcdn.info" crossorigin>
+		<link rel="dns-prefetch" href="https://gtcdn.info">
 		%sveltekit.head%
 	</head>
 	<body
