--- a/apps/noframework-gtmap-test/index.html
+++ b/apps/noframework-gtmap-test/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WebGL Map (Leaflet-like)</title>
+    <title>WebGL Map (GTMap)</title>
     <style>
       html,
       body {
